test/bad/classes/abstract01.px

class Test def
    func f() abstract

Test()
